2006-09-24  Brian Warner  <warner@lothar.com>

	* buildbot/changes/mail.py (parseBonsaiMail): fix the parser.
	Thanks to Robert Helmer for the patch.

	* buildbot/process/base.py (Build.setupSlaveBuilder): tell our
	BuildStatus about the buildslave name at the *beginning* of the
	build, rather than at the end. Thanks to Alexander Lorenz for the
	patch.
	* buildbot/status/html.py (StatusResourceBuild.body): always
	include the slavename in the build page, not just when the build
	has finished.
	* buildbot/status/mail.py (MailNotifier.buildMessage): include the
	slavename in the email message

2006-09-21  Brian Warner  <warner@lothar.com>

	* buildbot/scripts/sample.cfg: update to use new BuildStep classes
	from buildbot.steps
	* docs/examples/glib_master.cfg: same
	* docs/examples/hello.cfg: same
	* docs/examples/twisted_master.cfg: same, update to current usage

2006-09-19  Brian Warner  <warner@lothar.com>

	* buildbot/steps/python.py (PyFlakes): refactor, add summary logs
	(PyFlakes.createSummary): make it compatible with python-2.2

	* buildbot/test/test_steps.py (Python.testPyFlakes): add a test
	for at least the output-parsing parts of PyFlakes

2006-09-18  Brian Warner  <warner@lothar.com>

	* buildbot/steps/python.py: oops, fix import of StringIO

2006-09-17  Brian Warner  <warner@lothar.com>

	* buildbot/test/test_vc.py (VCBase._do_vctest_update_retry_1): it
	turns out that SVN-1.4.0 doesn't fail to update once you've
	replaced a file with a directory, unlike older versions of SVN and
	pretty much every other VC tool we support. Since what we really
	care about is that the update succeeds anyway, stop checking that
	the tree got clobbered and just assert that the build succeeded.
	(VCBase.printLogs): add a utility function for debugging

	* buildbot/process/step.py: oops, added extra imports by mistake

	* buildbot/changes/p4poller.py (P4Source._process_describe): do an
	rstrip() on the first line coming out of the 'p4 describe'